--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 }
 
 dependencies {
+	runtimeOnly 'mysql:mysql-connector-java'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -33,6 +34,8 @@ dependencies {
 	implementation 'com.querydsl:querydsl-jpa'
 
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time'
+
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.49'
 }
 
 test {
